--- a/website/css/index.css
+++ b/website/css/index.css
@@ -10,5 +10,9 @@
    	bottom: 0px;
    	height: 8%;
    	width: 100%;
-   	background: red;
+   	background: #AAAAAA;
+}
+#BAllowCookies{
+	margin: 0.5% 0% 0% 0.5%;
+    padding: 0.5%;
 }
