--- a/website/css/index.css
+++ b/website/css/index.css
@@ -16,3 +16,16 @@
 	margin: 0.5% 0% 0% 0.5%;
     padding: 0.5%;
 }
+body{
+	/*
+	background-color: grey;
+	background-image: url("../img/indexBG1920.jpeg");
+	background-repeat: no-repeat;
+	*/
+
+}
+.bg{
+	background-color: white;
+	opacity: 0.2;
+	border-radius: 0.5%
+}
