--- a/website/css/index.css
+++ b/website/css/index.css
@@ -32,3 +32,102 @@ body{
 .indexTitle{
 	margin-left: 2%;
 }
+
+.showcaseImg {
+	display: block;
+	width: 100%;
+	
+}
+
+.showcasePanel {
+	width: 50%;
+	float: left;
+	filter: blur(4px);
+  -webkit-filter: blur(4px);
+  	height: 800px;
+    background-position: left; 
+}
+
+#leftPanel {
+	background-image: url("../img/chart.jpg");
+}
+
+#divider {
+	height:100%;
+	width: 0.3%;
+	background-color: white;
+	float: left;
+	z-index: 0;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#rightPanel {
+	background-image: url("../img/datacenter.jpg");
+
+}
+
+#background {
+	margin-top: 50px;
+	width: 100%;
+	position: absolute;
+	z-index: -10;
+}
+
+#background:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: rgba(240, 240, 240, 0.5);
+}
+
+#promo {
+	padding-top: 300px;
+	color: white;
+	font-size: 3em;
+}
+
+#promoLeft {
+	width: 50%;
+	float: left;
+	text-align:center;
+}
+
+#promoRight {
+	width: 50%;
+	float: left;
+	text-align:center;
+}
+
+#demoJournal {
+	padding-top: 500px;
+}
+
+#demoJournal img {
+	width: 100%
+}
+
+.parallax {
+  perspective: 1px;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.parallax__layer--base {
+  transform: translateZ(0);
+}
+.parallax__layer--back {
+  transform: translateZ(-2px) scale(3);
+}
