--- a/website/css/datacenter.css
+++ b/website/css/datacenter.css
@@ -83,8 +83,28 @@
     margin:1%;
     float:left;
 }
-
-
+.notes input[type=submit]{
+    padding:2%;
+    margin: 1%;
+    border:none;
+    background-color: #ff751a;
+}
+.notes input[type=submit]:hover{
+    background-color: #0066ff;
+}
+#main{
+    width:100%;
+    height:500px;
+}
+.port1{
+    color:#ff9900;
+}
+.port2{
+    color:#3333ff;
+}
+.port3{
+    color:#ff0000;
+}
 
 
 
