--- a/website/css/index.css
+++ b/website/css/index.css
@@ -125,6 +125,7 @@
 
 .demo {
 	height: 100%;
+	min-height: 1000px;
 }
 
 #demoJournal {
@@ -137,29 +138,39 @@
 #demoDatacenter {
 	width: 100%;
 	height: 100%;
-	background-color: black;
-	color: white;
-
+	background-color: white;
+	color: black;
 }
 
 #journalLeft {
 	color: black;
 	text-align: center;
-	padding-top: 50px;
+	padding-top: 100px;
 }
 
-#journalRight {
+#journalImg {
 	background-image: url("https://www.tradervue.com/assets/feat-journal-dashboard-f67e6bd9666d7cdc7ff47144c8e4270f6eb42a62541883e7b00a37ec2667bfdc.png");
-	position: relative;
-}
-
-#datacenterLeft {
-
+	position: absolute;
+	width: 40%;
+	left: 55%;
+	height: 80%;
+	top: 153%;
+	box-shadow: 2px 2px 10px grey;
 }
 
 #datacenterRight {
 	text-align: center;
-	padding-top: 50px;
+	padding-top: 100px;
+}
+
+#datacenterImg {
+	background-image: url("https://assets.pcmag.com/media/images/514230-10-free-data-visualization-tools.jpg?thumb=y");
+	position: absolute;
+	width: 40%;
+	left: 5%;
+	height: 80%;
+	top: 295%;
+	box-shadow: -2px 2px 10px grey;
 }
 
 .demoHalves {
@@ -167,6 +178,7 @@
 	border: grey 1px solid;
 	float: left;
 	height: 100%;
+	z-index: 50;
 }
 
 .parallax {
@@ -199,4 +211,5 @@
 .parallax__layer--front {
     -webkit-transform: translateZ(90px) scale(.7);
     transform: translateZ(90px) scale(.7);
+    pointer-events: none;
 }
