--- a/website/css/datacenter.css
+++ b/website/css/datacenter.css
@@ -184,6 +184,7 @@ sidebar-portfolio
 .navbar{
     background-color: #000;
     margin: 0 auto;
+    padding:0;
 }
 .navbar-expand-lg .navbar-brand {
     color: #fff;
@@ -331,7 +332,6 @@ overlay
 
 .overlay a:hover, .overlay a:focus {
     color: #f1f1f1;
-    border-bottom: 3px solid #000;
 }
 
 .overlay .closebtn {
@@ -347,9 +347,6 @@ overlay
     right: 45px;
     font-size: 60px;
     background-color: #F8F9FA;
-}
-#menu{
-    display: none;
 }
 /* 
 
@@ -403,7 +400,7 @@ notes
     margin: 4% auto;
     color:#000;
     background-color:#F8F9FA;
-    border-bottom: 2px solid #ff751a;
+    border-bottom: 10px solid #ff751a;
 }
 .notes-card p{
     
@@ -413,21 +410,50 @@ notes
     margin-bottom: 50%;
 }
 /*
+portfolio orders
+*/
+.spec{
+    margin:2%;
+    float:left;
+    padding:1%;
+}
+.order-spec{
+    width:100%;
+    float: left;
+}
+
+/*
+dropdown
+*/
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+/*
 
 */
-@media screen and (max-height: 450px) {
+#menu{
+    display: none;
+}
+/*@media screen and (max-height: 450px) {
   .overlay a {font-size: 20px}
   .overlay .closebtn {
     font-size: 40px;
     top: 15px;
     right: 35px;
-  }
-@media screen and (max-width: 992px){
-   .navbar{
-        padding:6px;
-    }
-    #menu{
-        float:right;
-        display: block;
-    }
-}
+  }*/
+@media only screen and (max-width: 992px) {#menu {display: block;}}
