--- a/website/css/datacenter.css
+++ b/website/css/datacenter.css
@@ -1,7 +1,7 @@
 /*#FF751A orange
 #25313B dark blue
 #F8F9FA light grey
-#0889C4 blue*/ 
+#0889C4 blue*/
 body{
     background-color: #F8F9FA;
 }
@@ -133,7 +133,7 @@ sidebar-portfolio
     margin: 1%;
     border:none;
 }
-.user-buy input[type=submit]{
+.user-buy input[type=button]{
     padding:2%;
     width:100%;
     border:none;
@@ -152,7 +152,7 @@ sidebar-portfolio
 .containter-fluid{
     margin-top:55px;
 }
-@media (max-width: 768px) { 
+@media (max-width: 768px) {
     .containter-fluid{
         margin-left:0%;
     }
@@ -222,7 +222,7 @@ sidebar-portfolio
 #BLogin a{
     color:#fff;
     background-color:#25313B;
-    cursor: pointer; 
+    cursor: pointer;
 }
 #BSignUp a{
     color:#fff;
@@ -240,7 +240,7 @@ sidebar-portfolio
 #BSetttings a{
     color:#fff;
     background-color:#25313B;
-    cursor: pointer; 
+    cursor: pointer;
 }
 #BLogout a{
     color:#fff;
@@ -297,8 +297,8 @@ sidebar-portfolio
     padding:20px;
     color:#fff;
 }
-/* 
-overlay 
+/*
+overlay
 */
 .overlay {
     height: 100%;
@@ -348,7 +348,7 @@ overlay
     font-size: 60px;
     background-color: #F8F9FA;
 }
-/* 
+/*
 
 */
 .chart-header{
@@ -365,7 +365,7 @@ styling modals
 }
 .modal-header{
     background-color: #25313B;
-    color:#fff; 
+    color:#fff;
 }
 #MLoginBLogin,#MCreateNoteBCreateNote,#MSignUpBSingUp,#MForgotPasswordBForgotPassword,#MCreatePortBCreatePort{
     background-color: #ff751a;
@@ -403,7 +403,7 @@ notes
     border-bottom: 10px solid #ff751a;
 }
 .notes-card p{
-    
+
 }
 #notes-all{
     width:100%;
