--- a/website/css/index.css
+++ b/website/css/index.css
@@ -67,14 +67,10 @@
 	margin-right: auto;
 }
 
-#promo {
-	padding-top: 250px;
-	color: white;
-}
-
 .promoLogo {
 	width: 128px;
 	filter: invert(95%);
+	padding-top: 30%;
 }
 
 .promoText {
@@ -85,6 +81,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 20px;
+	color: white;
 }
 
 #promoLeft {
@@ -125,13 +122,10 @@
 
 .demo {
 	height: 100%;
-	min-height: 1000px;
 }
 
 #demoJournal {
-	margin-top: 750px;
 	width: 100%;
-	height: 100%;
 	background-color: white;
 }
 
