--- a/website/css/datacenter.css
+++ b/website/css/datacenter.css
@@ -18,7 +18,7 @@ sidebar
     left: 0;
     z-index: 100;
     padding: 0;
-    width:25%;
+    width:16.6%;
     overflow-x: hidden;
 }
 .sidebar-header{
@@ -71,6 +71,9 @@ sidebar-portfolio
 }
 .fa-angle-down{
     float:right;
+}
+.fa-angle-up{
+    float: right;
 }
 .port1{
     color:#ff9900;
@@ -176,6 +179,7 @@ sidebar-portfolio
 }
 #main{
     min-height:500px;
+    width: 100%;
 }
 .containter-fluid{
   background-color:#F8F9FA;
@@ -412,16 +416,28 @@ notes
 /*
 portfolio orders
 */
-.spec{
+.table thead th{
+    color:#fff;
+    background-color: #0889C4;
+    text-align: center;
     margin:2%;
-    float:left;
-    padding:1%;
+    cursor:pointer;
 }
-.order-spec{
-    width:100%;
-    float: left;
+th:hover{
+    background-color: #0999dc;
 }
-
+.table tbody td{
+    text-align: center;
+}
+[type="date"] {
+  background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
+}
+[type="date"]::-webkit-inner-spin-button {
+  display: none;
+}
+[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
 /*
 dropdown
 */
