--- a/website/css/index.css
+++ b/website/css/index.css
@@ -36,7 +36,7 @@ body {
   	top: 0;
   	left: 0;
   	right: 0;
-  	background: rgba(200, 200, 200, 0.5);
+  	background: rgba(160, 160, 160, 0.5);
 }
 
 .showcasePanel {
@@ -50,14 +50,14 @@ body {
 
 #leftPanel {
 	background-image: url("../img/chart.jpg");
-	background-size: 200%;
+	background-size: 300%;
 	background-repeat: no-repeat;
 	background-position: 100% 30%;
 }
 
 #rightPanel {
 	background-image: url("../img/datacenter.jpg");
-	background-size: 200%;
+	background-size: 300%;
 	background-repeat: no-repeat;
 	background-position: 10% 30%;
 }
@@ -177,10 +177,16 @@ body {
 	height: 100%;
 	z-index: 50;
 	padding: 75px;
+	background-color: white;
 }
 
 .demoText {
-	background-color: #f1f1f1; height: auto; width: 100%; padding-top: 75px; padding-bottom: 75px; border-radius: 2px;
+	background-color: white; 
+	height: auto; 
+	width: 100%; 
+	padding: 75px 40px 75px 40px;
+	border-radius: 2px;
+	box-shadow: -2px 2px 5px grey;
 }
 
 #horizontalDivider {
