--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,7 +1,3 @@
-body {
-	min-width: 1050px;
-}
-
 .title{
 	margin-top: 10%;
 }
@@ -36,7 +32,7 @@ body {
   	top: 0;
   	left: 0;
   	right: 0;
-  	background: rgba(160, 160, 160, 0.5);
+  	background: rgba(200, 200, 200, 0.5);
 }
 
 .showcasePanel {
@@ -50,14 +46,14 @@ body {
 
 #leftPanel {
 	background-image: url("../img/chart.jpg");
-	background-size: 300%;
+	background-size: 200%;
 	background-repeat: no-repeat;
 	background-position: 100% 30%;
 }
 
 #rightPanel {
 	background-image: url("../img/datacenter.jpg");
-	background-size: 300%;
+	background-size: 200%;
 	background-repeat: no-repeat;
 	background-position: 10% 30%;
 }
@@ -71,10 +67,14 @@ body {
 	margin-right: auto;
 }
 
+#promo {
+	padding-top: 250px;
+	color: white;
+}
+
 .promoLogo {
 	width: 128px;
 	filter: invert(95%);
-	padding-top: 30%;
 }
 
 .promoText {
@@ -85,7 +85,6 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 20px;
-	color: white;
 }
 
 #promoLeft {
@@ -126,10 +125,13 @@ body {
 
 .demo {
 	height: 100%;
+	min-height: 1000px;
 }
 
 #demoJournal {
+	margin-top: 750px;
 	width: 100%;
+	height: 100%;
 	background-color: white;
 }
 
@@ -173,34 +175,10 @@ body {
 
 .demoHalves {
 	width: 50%;
+	border: grey 1px solid;
 	float: left;
 	height: 100%;
 	z-index: 50;
-	padding: 75px;
-	background-color: white;
-}
-
-.demoText {
-	background-color: white; 
-	height: auto; 
-	width: 100%; 
-	padding: 75px 40px 75px 40px;
-	border-radius: 2px;
-	box-shadow: -2px 2px 5px grey;
-}
-
-#horizontalDivider {
-	width: 100%;
-	background-color: white;
-	height: 2px;
-}
-
-#horizontalDivider div {
-	width: 92%;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: grey;
-	height: 100%;
 }
 
 .parallax {
