--- a/website/css/datacenter.css
+++ b/website/css/datacenter.css
@@ -494,6 +494,17 @@ dropdown
     padding: 12px 16px;
     z-index: 1;
 }
+.dropdown-content span{
+  color: #000;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+    cursor:pointer;
+}
+
+.dropdown-content span:hover {background-color: #f1f1f1}
+
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -501,6 +512,21 @@ dropdown
 /*
 
 */
+.fa-ellipsis-v{
+    appearance: none;
+     display: inline-block;
+     color: #000;
+     top: 10px;
+     width: 30px;
+     border: 0;
+     border-radius: 50px;
+    padding: 5%;
+     cursor: pointer;     
+     outline: none;    
+}
+.fa-ellipsis-v:hover{
+    background-color: #fff;
+}
 #menu{
     display: none;
 }
