--- a/website/css/datacenter.css
+++ b/website/css/datacenter.css
@@ -66,10 +66,13 @@ sidebar-portfolio
     background-color:  #fff;
     color:#0889C4;
 }
-.fa-angle-right{
+.fa-angle-up{
     float: right;
 }
 .fa-angle-down{
+    float:right;
+}
+.fa-angel-up{
     float:right;
 }
 .port1{
@@ -415,6 +418,11 @@ portfolio orders
 .spec{
     margin:2%;
     cursor:pointer;
+}
+.table thead th{
+    background-color: #0999dc;
+    cursor:pointer;
+    color:#fff;
 }
 th:hover{
     background-color: #0999dc;
