adding api call to search and styling

--- a/website/css/search.css
+++ b/website/css/search.css
@@ -13,7 +13,8 @@
 .searchImg{
 	height: 64px;
 	width: 64px;
+	border-right: 1 solid black;
 }
-#moreInfo{
-	border-left: 1px solid black;
+.searchResult:hover{
+	/*background-color: ;*/
 }
