--- a/website/css/datacenter.css
+++ b/website/css/datacenter.css
@@ -54,6 +54,17 @@ sidebar-portfolio
     background-color: #3a4e5f;
     color:#fff;
 }
+#changedisplay{
+    z-index:12;
+    position: fixed;
+    bottom:0;
+    right:0;
+    background-color:#25313B;
+    margin:0 auto;
+}
+#changedisplay:hover{
+    background-color:#FF751A;
+}
 .fa-trash,.fa-edit,.header-port{
     color: #fff;
     background-color: #0889C4;
@@ -558,6 +569,7 @@ dropdown
 .errormess{
     color:red;
 }
+
 /*@media screen and (max-height: 450px) {
   .overlay a {font-size: 20px}
   .overlay .closebtn {
