--- a/website/css/index.css
+++ b/website/css/index.css
@@ -122,6 +122,7 @@ body {
 	background-color: #4B77BE;
 	border: 2px solid #4B77BE;
 	color: white;
+
 }
 
 .demo {
@@ -187,6 +188,11 @@ body {
 	padding: 75px 40px 75px 40px;
 	border-radius: 2px;
 	box-shadow: -2px 2px 5px grey;
+}
+
+.getStarted {
+	text-decoration: underline;
+	cursor: pointer;
 }
 
 #horizontalDivider {
