Commiting Settings from Fernando since he had problems with merging
Fernando work in an older version of his branch and would cause merging confits if he would commit his changes.

Co-Authored-By: feerns <feerns@users.noreply.github.com>

--- a/website/css/Settings.css
+++ b/website/css/Settings.css
@@ -1,44 +1,55 @@
 .vertical-settings {
     height: 100%;
-    width: 15%;
+    width: 10%;
     position: fixed;
     z-index: 1;
     top: 30px;
     left: 0;
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 7%;
     background-color: #25313B;
     float: left;
     color: #F8F9FA;
+    text-align: center;
+    align-items: center;
 }
 
-.vertical-settings a {
-    padding: 6px 8px 6px 60px;
+.vertical-settings button {
+    padding: 120px 8px 6px 0px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 15px;
+    background-color: inherit;
     color: #F8F9FA;
     display: block;
+    width: 100%;
+    border: none;
+    outline: none;
+    transition: 0.3s;
 }
 
-.vertical-settings a:hover {
+.vertical-settings button:hover {
     color: #FF751A;
 }
 
-.vertical-settings a.active {
+.vertical-settings button.active {
     color: #FF751A;
 }
 
-.option-settings {
-	top: 30px;
-    margin-left: 15%;
-    padding: 80px 10px;
+.content {
+	top: 40px;
+    margin-left: 10%;
+    padding: 80px 10x;
     float: left;
     position: absolute;
+    padding-left: 30%;
+    
 }
 
-.option-settings a {
-    padding: 6px 8px 6px 16px;
+.content a {
+    padding: 40px 8px 6px 16px;
     text-decoration: none;
     color: black;
     display: block;
+    align-items: center;
+    text-align: center;
 } 
