--- a/website/css/Settings.css
+++ b/website/css/Settings.css
@@ -73,7 +73,8 @@
     resize: none;
     overflow: hidden;
 }
-.content input[type="submit"] {
+.content input[type="submit"],
+.content button {
     -moz-box-shadow: inset 0px 1px 0px 0px #FF751A;
     -webkit-box-shadow: inset 0px 1px 0px 0px #FF751A;
     box-shadow: inset 0px 1px 0px 0px #FF751A;
@@ -88,8 +89,54 @@
     text-transform: uppercase;
 }
 
-.content input[type="submit"]:hover {
+.content input[type="submit"]:hover,
+.content button:hover {
     background: linear-gradient(to bottom, #FF751A 1%, #FF751A 100%);
     background-color: #FF751A;
     color: #25313B;
 }
+
+/*.modald {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale;
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.md-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+}
+
+.close {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+}
+
+.close:hover {
+    color: red;
+}
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}*/
+
