--- a/website/css/datacenter.css
+++ b/website/css/datacenter.css
@@ -595,6 +595,23 @@ dropdown
     color:red;
 }
 
+/*Cookie banner*/
+#banner {
+    z-index: 1001;
+    width: 100%;
+    height: 30%;
+    position: fixed;
+    bottom: 0;
+    background-color: #25313B;
+    color: white;
+    padding: 60px;
+}
+
+#cookieButton {
+    float: right;
+    background-color: #ff751a;
+    padding: 15px;
+}
 /*@media screen and (max-height: 450px) {
   .overlay a {font-size: 20px}
   .overlay .closebtn {
